@@ -1,3 +1,7 @@
+2011-02-03  Steffen Kamper  <steffen@typo3.org>
+
+	* Fixed bug #17407: Pagetree cause endless loop in ExtJS events
+
 2011-02-02  Steffen Kamper  <steffen@typo3.org>
 
 	* Fixed bug #17434: Pagetree: when start edit, the text should be selected
